--- a/combobox/ajax.html
+++ b/combobox/ajax.html
@@ -107,8 +107,8 @@
  
                 $("#demo").phui_combobox_ajax({
                     maxHeight: "320px",
-                    autocompleteEnabled: false,
-                    loadOnDemand: true,
+                    autocompleteEnabled: true,
+                    loadOnDemand: false,
                     url: "/Archer/Service/DiscussionForumServiceJS.svc/GetForumsForCommunity"
                 });
                 
