Fixed flickering and ESC bugs.

--- a/combobox/ajax.html
+++ b/combobox/ajax.html
@@ -98,8 +98,8 @@
  
                 $("#demo").phui_combobox_ajax({
                     maxHeight: "320px",
-                    autocompleteEnabled: true,
-                    loadOnDemand: false,
+                    autocompleteEnabled: false,
+                    loadOnDemand: true,
                     url: "/Archer/Service/DiscussionForumServiceJS.svc/GetForumsForCommunity"
                 });
                 
