--- a/combobox/combobox.html
+++ b/combobox/combobox.html
@@ -54,7 +54,7 @@
 
                 // Nested example
                 $("#combobox_demo").phui_combobox({
-                    items: [{ value: "1", text: "hola", enabled: "true", 
+                    items: [{ value: "1", text: "hola", enabled: "true", selected: true,
                                 children: [  { value: "5", text: "chicago", enabled: "true", children: [] },
                                               { value: "6", text: "kansas", enabled: "true", 
                                               children: [ { value: "7", text: "losangeles", enabled: "true", children: [] } ] } ] },
