Updated fixtures to Justin's latest changes.

--- a/combobox/combobox.html
+++ b/combobox/combobox.html
@@ -43,8 +43,7 @@
                 src='../../steal/steal.js'>   
         </script>
         <script type='text/javascript'>
-            steal.plugins("phui/combobox",
-                            "jquery/model").then(function($){
+            steal.plugins("phui/combobox").then(function($){
                                 
                  
                 /*$("#combobox_demo").phui_combobox({
