--- a/groupablegrid.html
+++ b/groupablegrid.html
@@ -26,8 +26,8 @@
 			steal.plugins("phui/grid/groupable",
 							"phui/filler",
 							"jquery/model",
-							"jquery/dom/fixtures").then(function($){
-				$.fixture["-make"](["resources","resource"],50,function(num){
+							"jquery/dom/fixture").then(function($){
+				$.fixture["make"](["resources","resource"],50,function(num){
 					return {
 						id		:	num,
 						name : "Resource "+num,
