Fix for bug in window size adjustment.

--- a/combobox/combobox.html
+++ b/combobox/combobox.html
@@ -53,6 +53,36 @@
 		<h3>Ajax Combobox Demo</h3>
         <input id="ajax_demo" name="ajax_demo" />		
 
+		<div>abc</div>
+		<br/>
+		<div>abc</div>
+		<br/>
+		<div>abc</div>
+		<br/>
+		<div>abc</div>
+		<br/>
+		<div>abc</div>
+		<br/>
+		<div>abc</div>
+		<br/>
+		<div>abc</div>
+		<br/>
+		<div>abc</div>
+		<br/>
+		<div>abc</div>
+		<br/>
+		<div>abc</div>
+		<br/>
+		<div>abc</div>
+		<br/>
+		<div>abc</div>
+		<br/>
+		<div>abc</div>
+		<br/>
+		<div>abc</div>
+		<br/>
+		<div>abc</div>
+		<br/>
         <script type='text/javascript' 
                 src='../../steal/steal.js'>   
         </script>
