grid uses calculated scrollbar widths

--- a/scrollbar_width/scrollbar_width.html
+++ b/scrollbar_width/scrollbar_width.html
@@ -2,7 +2,7 @@
             "http://www.w3.org/TR/html4/strict.dtd">
 <html lang="en">
 	<head>
-		<title>block</title>
+		<title>scrollbar width</title>
         <style type='text/css'>
             body {font-family: verdana}
             .error {border: solid 1px red;}
@@ -15,12 +15,12 @@
 	</head>
 	<body>
 		<script type='text/javascript' 
-                src='../../steal/steal.js?steal[app]=phui/scrollbar_size&steal[env]=development'>   
+                src='../../steal/steal.js?steal[app]=phui/scrollbar_width&steal[env]=development'>   
         </script>
 		<script type='text/javascript'>
 			$(function(){
 				setTimeout(function(){
-					alert("Phui.scrollbarSize =" +Phui.scrollbarSize)
+					alert("Phui.scrollbarWidth =" +Phui.scrollbarWidth)
 				})
 			})
 		</script>
