--- a/block/block.html
+++ b/block/block.html
@@ -14,6 +14,9 @@
 			.buttons {
 				margin: 20px;
 			}
+			button {
+				z-index: 0;
+			}
 			#text {
 				margin: 20px;
 				border: 2px solid black;
