Tests and docs for phui/block.

--- a/block/block.html
+++ b/block/block.html
@@ -9,47 +9,28 @@
             .error_text { color: red; font-size: 10px;}
             td {padding: 3px;}
 			#blocker {
+				width: 0;
+				height: 0;
 				background-color: green;
-			}
-			.buttons {
-				margin: 20px;
-			}
-			button {
-				z-index: 0;
-			}
-			#text {
-				margin: 20px;
-				border: 2px solid black;
-				width: 320px;
 			}
         </style>
 	</head>
 	<body>
-	    <h1>Block</h1>
-		<div id='blocker'></div>
-		<a href='#' id='block'>Block</a>
-		<div class="buttons">
-			<button name="showText" type="text">Show Text</button>
-			<button name="reset" type="text">Reset</button>
-			<div id="text">Click the Show Text button.</div>
-		</div>
+<div id="demo-html">		
+<h1>Block</h1>
+<div id='blocker'></div>
+<a href='#' id='block'>Block</a>
+</div>
 		<script type='text/javascript' 
                 src='../../steal/steal.js?steal[app]=phui/block&steal[env]=development'>   
         </script>
-		<script type='text/javascript'>
-			$(function(){
-				$("#blocker").css("opacity",0.5);
-				$("#block").click(function(){
-					$("#blocker").phui_block().trigger('show')
-				});
-				
-				$("button[name=showText]").click( function(ev) {
-					$("#text").text("You were able to click the button!")
-				} );
-				$("button[name=reset]").click( function(ev) {
-					$("#text").text("Click the Show Text button.")				
-				} );				
-			})
-		</script>
+<script id="demo-source" type='text/javascript'>
+$(function(){
+	$("#blocker").css("opacity",0.5);
+	$("#block").click(function(){
+		$("#blocker").phui_block().trigger('show')
+	});			
+})
+</script>
 	</body>
 </html>
