Much simpler and cleaner solution to handle ie7 horizontal overflow bug.

--- a/combobox/combobox.html
+++ b/combobox/combobox.html
@@ -15,7 +15,8 @@
 			.color5 { background-color: #778877; padding-left: 10px; margin: 1px; }
 			.text { margin-left: 5px; }
         </style>    
-        <link type="text/css" href="combobox.css" rel="stylesheet" />
+        <!--link type="text/css" href="combobox.css" rel="stylesheet" / -->
+		<link type="text/css" href="StyleResourceHandler.css" rel="stylesheet" />	
     </head>
     <body>
     	
