most tests work in IE, FF, Chrome, one does not

--- a/filler/filler.html
+++ b/filler/filler.html
@@ -81,7 +81,7 @@
 		<td>
 		
 				
-				<div class='container'>
+				<div class='container' id='fill1'>
 					<h3>Nothing &uarr;</h3>
 					<div class='redBack'>
 						<p class='grnBack'>No Pad & Bord &uarr;</p>
@@ -94,7 +94,7 @@
 		</td>
 		<td>
 			
-				<div class='container'>
+				<div class='container' id='fill2'>
 					<h3>Nothing &uarr;</h3>
 					<div class='redBack redBD'>
 						<p class='grnBack'>Border &uarr;</p>
@@ -107,7 +107,7 @@
 		</td>
 		<td>
 			
-				<div class='container bluBD'>
+				<div class='container bluBD' id='fill3'>
 					<h3>Border &uarr;</h3>
 					<div class='redBack' style="padding-top: 1px">
 						<p class='grnBack'>Padding &uarr;</p>
