Added option to keep tooltip open if mouse is over it.

--- a/tooltip/tooltip.html
+++ b/tooltip/tooltip.html
@@ -27,7 +27,7 @@
 		<script id="demo-source" type='text/javascript'>
 			$(function(){
 				$("#tooltip1").phui_tooltip({html: "<h3>Here!</h3>"});
-				$("#tooltip2").phui_tooltip({html: "<h3>There!</h3>"});
+				$("#tooltip2").phui_tooltip({html: "<h3>There!</h3>", keep: true});
 			})
 		</script>
 	</body>
