--- a/modal/modal.html
+++ b/modal/modal.html
@@ -26,7 +26,7 @@
 	    </div>
 		<a href="#" id='show'>show as modal</a>
 		<script type='text/javascript' 
-                src='../../steal/steal.js?steal[app]=phui/modal&steal[env]=development'>   
+                src='../../steal/steal.js?phui/modal,production'>   
         </script>
 		<script type='text/javascript'>
 			$("#show").click(function(){
