--- a/combobox/combobox.html
+++ b/combobox/combobox.html
@@ -108,7 +108,8 @@
 				data[0].selected = true;
 				 
                 $("#combobox_slow").phui_combobox({
-                    items: data });
+                    items: data,
+					maxHeight: 300 });
 
 
 
