--- a/fittable/fittable.html
+++ b/fittable/fittable.html
@@ -4,20 +4,31 @@
 	<head>
 		<title>fittable</title>
         <style type='text/css'>
-            body {font-family: verdana}
-            .error {border: solid 1px red;}
-            .error_text { color: red; font-size: 10px;}
-            td {padding: 3px;}
+            body { font-family: verdana;}
+			.padding {height:120px}
         </style>
+       <link type="text/css" href="../../phui/combobox/combobox.css" rel="stylesheet" />
 	</head>
 	<body>
-	    <h1>Welcome to JavaScriptMVC 3.0!</h1>
-        <ul>
-            <li>Include plugins and files in <i>phui/fittable/fittable.js</i>.</li>
-            <li>Change to production mode by changing <i>development</i> to <i>production</i> in this file.</li>
-        </ul>
-		<script type='text/javascript' 
-                src='../../steal/steal.js?phui/fittable,development'>   
+		<div class="padding"></div>
+		<h3>Fittable  Demo</h3>
+		<input id="combobox" type="text" name="myname" />
+        <script type='text/javascript' 
+                src='../../steal/steal.js'>   
         </script>
+        <script type='text/javascript'>
+            steal.plugins("phui/combobox").then(function($){
+				
+				var data = [];
+				for(var i =0; i < 10; i++){
+					data.push({value: i, text: "item"+i})
+				}
+				data[0].selected = true;
+				 
+                $("#combobox").phui_combobox({
+                    items: data});
+			});
+			steal.start();
+		</script>
 	</body>
 </html>
