--- a/fittable/fittable.html
+++ b/fittable/fittable.html
@@ -4,30 +4,48 @@
 	<head>
 		<title>fittable</title>
         <style type='text/css'>
-            body { font-family: verdana;} 
+            body { font-family: verdana; margin: 0px; padding: 0px;} 
 			.container, .container4 {
 				float:left;
-				width:23%;
+				width:20%;
 				margin-left:10px;
 				position:relative;
-				height:480px;
-				border:2px solid #CCCCCC;
+				height:400px;
+				border:5px solid #CCCCCC;
 				overflow:auto;
+				padding: 5px;
+				margin: 10px;
 			}
-			.topPadding {height:10px}
-			.bottomPadding {height: 300px;}
-			.fittable {width:140px;background-color:#AAAAAA;border:1px solid blue;}
+	
+			.bottomPadding {height: 400px;}
+			.fittable {
+				width:140px;background-color:#AAAAAA;
+				top: 0px; left: 0px;
+				border:1px solid blue;
+				position: absolute;
+			}
 			.topPadding3 {height:300px}
 			.bottomPadding3 {height: 100px;}
 			.container4 {
 				height: 250px;
 			}			
 			.topPadding4 {height:10px}
-			.bottomPadding4 {height: 150px;}			
+			.bottomPadding4 {height: 150px;}	
+			p {
+				height: 60px;
+				margin: 0px;
+				padding: 0px;
+			}	
+			#fitter {
+				z-index: 99;
+				top: 415px;
+				left: 300px;
+			}	
         </style>
        <link type="text/css" href="../../phui/combobox/combobox.css" rel="stylesheet" />
 	</head>
 	<body>
+		<div id='fitter' class="fittable">Demo Fittable</div>
 		<div class="container">
 			<p>If the element can be positioned without scrolling below, draw it</p>
 			<div class="topPadding"></div>
@@ -71,7 +89,9 @@
 					return items.join("");					
 				}
 			
-				$("#fittable1").css("opacity",0).html( items(5));				
+				$("#fittable1")//.css("opacity",1)
+				//	.css("position", "absolute")
+				.html( items(5));				
 				$("#target1").click(function(ev){
 					$("#fittable1").fit({
 						within:300,
@@ -79,12 +99,13 @@
 					}).css("opacity",1);
 				});
 				
-				$("#fittable2").css("opacity",0).html( items(30));				
+				$("#fittable2")//.css("opacity",0)
+				.html( items(30));				
 				$("#target2").click(function(ev){
 					$("#fittable2").fit({
 						within:300,
 						of:$("#target2")
-					}).css("opacity",1);
+					})
 				});
 				
 				$("#fittable3").css("opacity",0).html( items(30));				
