--- a/combobox/combobox2.html
+++ b/combobox/combobox2.html
@@ -37,6 +37,7 @@
         <link type="text/css" href="combobox.css" rel="stylesheet" />
     </head>
     <body>
+    	<h3>Positioning Tests</h3>
     	<!-- Combobox positioning tests:
  			
 			 1. Combobox appended to document
@@ -47,26 +48,26 @@
 			 6. Combobox appended to <div> inside iframe - <div> is positioned (absolute) -->
 			 
 		<!-- 1. Combobox appended to document -->
-		<h5>Tests if dropdown opens in the correct position if the combobox is appended to the document.</h3>
+		<h5>1. Tests if dropdown opens in the correct position if the combobox is appended to the document.</h3>
 		<div id="combobox1_log"></div>
         <input id="combobox1" type="text" name="name1" />
 		
 		<!-- 2. Combobox appended to <div> - <div> is not positioned -->
 		<div id="combobox2_container">
-			<h5>Tests if dropdown opens in the correct position if the combobox is appended to a non-positioned &lt;div&gt;.</h3>
+			<h5>2. Tests if dropdown opens in the correct position if the combobox is appended to a non-positioned &lt;div&gt;.</h3>
 			<div id="combobox2_log"></div>
         	<input id="combobox2" type="text" name="name2" />
 		</div>		
 		
 		<!-- 3. Combobox appended to <div> - <div> is positioned (absolute) -->
 		<div id="combobox3_container">
-			<h5>Tests if dropdown opens in the correct position if combobox is appended to positioned (absolute) &lt;div&gt;.</h3>
+			<h5>3. Tests if dropdown opens in the correct position if combobox is appended to positioned (absolute) &lt;div&gt;.</h3>
 			<div id="combobox3_log"></div>
         	<input id="combobox3" type="text" name="name3" />
 		</div>		
 		
-		<!-- 4. Combobox appended to iframe -->
-		<h5>Tests if dropdown opens in the correct position appended to iframe.</h5>
+		<!-- 4/5/6. Combobox appended to iframe -->
+		<h5>4/5/6. Tests if dropdown opens in the correct position appended to iframe.</h5>
 		<iframe id="iframe1" src="combobox2_iframe.html" name="iframe1"></iframe>
 		
         <script type='text/javascript' 
