--- a/combobox/combobox2_iframe.html
+++ b/combobox/combobox2_iframe.html
@@ -33,28 +33,25 @@
     <body>
     	<!-- Combobox positioning tests:
  			
-			 1. Combobox appended to document
-			 2. Combobox appended to <div> - <div> is not positioned
-			 3. Combobox appended to <div> - <div> is positioned (absolute)
-			 4. Combobox appended to iframe
-			 5. Combobox appended to <div> inside iframe - <div> is not positioned
-			 6. Combobox appended to <div> inside iframe - <div> is positioned (absolute) -->
+			 4. Combobox appended to document
+			 5. Combobox appended to <div> - <div> is not positioned
+			 6. Combobox appended to <div> - <div> is positioned (absolute) -->
 			 
-		<!-- 1. Combobox appended to document -->
-		<h5>Tests if dropdown opens in the correct position if the combobox is appended to the document.</h3>
+		<!-- 4. Combobox appended to document -->
+		<h5>4. Tests if dropdown opens in the correct position if the combobox is appended to the document.</h3>
 		<div id="combobox1_log"></div>
         <input id="combobox1" type="text" name="name1" />
 		
-		<!-- 2. Combobox appended to <div> - <div> is not positioned -->
+		<!-- 5. Combobox appended to <div> - <div> is not positioned -->
 		<div id="combobox2_container">
-			<h5>Tests if dropdown opens in the correct position if the combobox is appended to a non-positioned &lt;div&gt;.</h3>
+			<h5>5. Tests if dropdown opens in the correct position if the combobox is appended to a non-positioned &lt;div&gt;.</h3>
 			<div id="combobox2_log"></div>
         	<input id="combobox2" type="text" name="name2" />
 		</div>		
 		
-		<!-- 3. Combobox appended to <div> - <div> is positioned (absolute) -->
+		<!-- 6. Combobox appended to <div> - <div> is positioned (absolute) -->
 		<div id="combobox3_container">
-			<h5>Tests if dropdown opens in the correct position if combobox is appended to positioned (absolute) &lt;div&gt;.</h3>
+			<h5>6. Tests if dropdown opens in the correct position if combobox is appended to positioned (absolute) &lt;div&gt;.</h3>
 			<div id="combobox3_log"></div>
         	<input id="combobox3" type="text" name="name3" />
 		</div>		
