Case insensitive autocomplete + tests.

--- a/combobox/combobox3_iframe.html
+++ b/combobox/combobox3_iframe.html
@@ -60,7 +60,7 @@
 		
 		<!-- 4. Combobox appended to <div> - <div> is positioned (absolute) -->
 		<div id="combobox2_container">
-			<h5>4. Tests if dropdown opens in the correct position if combobox is appended to positioned (absolute) &lt;div&gt;.</h3> 
+			<h5>4. Tests if dropdown opens in the correct position if combobox is appended to scrollable, positioned (absolute) &lt;div&gt;.</h3> 
 			<input id="combobox2_dropdown_height" name="combobox2_dropdown_height" type="hidden" value="143"/>
 			<div id="combobox2_log"></div>
         	<input id="combobox2" type="text" name="name2" />
