--- a/combobox/positioning4d.html
+++ b/combobox/positioning4d.html
@@ -70,7 +70,8 @@
 				// maximize window so that positioning tests execute correctly.
 				function maximize() {
 				  window.moveTo(0, 0);
-				  window.resizeTo(screen.width, screen.height);
+				  //window.resizeTo(screen.width, screen.height);
+				  window.resizeTo("1366", "768");
 				}
 				maximize();				
 					
