phui become mxui

--- a/datatable/datatable.html
+++ b/datatable/datatable.html
@@ -10,7 +10,7 @@
             .error_text { color: red; font-size: 10px;}
             td {padding: 3px;}
 			
-			/* Phui.Datatable css */
+			/* Mxui.Datatable css */
 			.mxui_datatable {
              	font-size: 0.7em;
             }			
