--- a/menuable/selectshow/selectshow.html
+++ b/menuable/selectshow/selectshow.html
@@ -44,7 +44,7 @@
         </script>
 		<script type='text/javascript'>
 			
-			Phui.Menuable.SelectShow.extend("Phui.Menuable.SelectShow.Submenu",
+			Mxui.Menuable.SelectShow.extend("Mxui.Menuable.SelectShow.Submenu",
 			{
 				">li click": function(el, ev){
 					el.trigger("activate")
