--- a/navigation/navigation.html
+++ b/navigation/navigation.html
@@ -112,7 +112,7 @@
                 compress='false'>   
         </script>
         <script type='text/javascript'>
-            $("#nav>ul").mixin( Phui.Navigation  )
+            $("#nav>ul").mixin( Mxui.Navigation  )
         </script>
 	</body>
 </html>
