--- a/tabs/tabs.html
+++ b/tabs/tabs.html
@@ -37,7 +37,7 @@
 	</head>
 	<body>
 		<h1>Tabs</h1>
-		<h2>Phui.Tabable</h2>
+		<h2>Mxui.Tabable</h2>
 		<div class='tabarea'>
 		    <ul id="tabable">
 		        <li><a href="#fragment-1"><span>One</span></a></li>
