--- a/toolbar/toolbar.html
+++ b/toolbar/toolbar.html
@@ -76,7 +76,7 @@
                 compress='false'>   
         </script>
         <script type='text/javascript'>
-            var J = Phui;
+            var J = Mxui;
 			
 			//J.Toolbar( J.Menu(J.Positionable)  ).extend("My.Toolbar")
 			
