--- a/tree/tree.html
+++ b/tree/tree.html
@@ -6,7 +6,7 @@
 		<link type="text/css" href="tree.css" rel="stylesheet" />
 	</head>
 	<body>
-		<h1>Phui.Tree</h1>
+		<h1>Mxui.Tree</h1>
 		<h2>Basic</h2>
 	    <ul id='menu1'>
             <li><a>A</a>
