--- a/widget/editable/editable.html
+++ b/widget/editable/editable.html
@@ -18,7 +18,7 @@
                 compress='false'>   
         </script>
 		<script type='text/javascript'>
-			$("#content").html( ""+  Phui.Widget.Editable.view({value: 5}) ).hookupView();
+			$("#content").html( ""+  Mxui.Widget.Editable.view({value: 5}) ).hookupView();
 		</script>
 	</body>
 </html>
