--- a/filler/funcunit.html
+++ b/filler/funcunit.html
@@ -4,7 +4,7 @@
     </head>
     <body>
 
-    <h1 id="qunit-header">Phui Filler Test Suite</h1>
+    <h1 id="qunit-header">Mxui Filler Test Suite</h1>
 	<h2 id="qunit-banner"></h2>
 	<div id="qunit-testrunner-toolbar"></div>
 	<h2 id="qunit-userAgent"></h2>
