--- a/funcunit.html
+++ b/funcunit.html
@@ -3,7 +3,7 @@
 		<link rel="stylesheet" type="text/css" href="../funcunit/qunit/qunit.css" />
 	</head>
 	<body>
-		<h1 id="qunit-header">Phui Test Suite</h1>
+		<h1 id="qunit-header">Mxui Test Suite</h1>
 		<h2 id="qunit-banner"></h2>
 		<div id="qunit-testrunner-toolbar"></div>
 		<h2 id="qunit-userAgent"></h2>
