--- a/scrollbar_width/scrollbar_width.html
+++ b/scrollbar_width/scrollbar_width.html
@@ -20,7 +20,7 @@
 		<script type='text/javascript'>
 			$(function(){
 				setTimeout(function(){
-					alert("Phui.scrollbarWidth =" +Phui.scrollbarWidth)
+					alert("Mxui.scrollbarWidth =" +Mxui.scrollbarWidth)
 				})
 			})
 		</script>
