--- a/widget/editable.html
+++ b/widget/editable.html
@@ -20,7 +20,7 @@
                 compress='false'>   
         </script>
 		<script type='text/javascript'>
-			$("#content").html( ""+  Phui.Widget.Editable.view({value: 5}) ).hookupView();
+			$("#content").html( ""+  Mxui.Widget.Editable.view({value: 5}) ).hookupView();
 
 		</script>
 	</body>
