--- a/slider/slider.html
+++ b/slider/slider.html
@@ -9,18 +9,18 @@
             .error_text { color: red; font-size: 10px;}
             td {padding: 3px;}
 			#container {
-				width: 400px;
+				width: 300px;
 				border: solid 1px black;
 			}
 			#slider {
-				width: 30px;
+				width: 26px;
 				border: solid 2px green;
 				background-color: #008000;
 				height: 30px;
 			}
 			body {
 				margin: 0px;
-				padding: 0px;
+				padding: 30px;
 			}
         </style>
 	</head>
@@ -28,11 +28,16 @@
 	    <div id='container'>
 	    	<div id='slider'></div>
 	    </div>
+		<input id='value'/>
 		<script type='text/javascript' 
                 src='../../steal/steal.js?mxui/slider,development'>   
         </script>
 		<script type='text/javascript'>
-			$("#slider").mxui_slider({interval: 1, min: 1, max: 10, val: 5});
+			$("#slider").mxui_slider({interval: 1, min: 1, max: 10, val: 5})
+			.change(function(ev, value){
+				$('#value').val(value)
+			});
+			
 		</script>
 	</body>
 </html>
