fixed bug in slider

--- a/slider/creating.html
+++ b/slider/creating.html
@@ -11,7 +11,7 @@ through creating a basic slider widget.</p>
 
 <h2>Demo</h2>
 
-Mxui slider
+<p><a href='http://javascriptmvc.com/mxui/slider/slider.html'>Mxui slider</a></p>
 
 <h2>Step 1:  Creating a widget play-place.</h2>
 <p>For the vast majority of apps we build, we have 2 main folders: the application folder and the widget folder.</p>
