--- a/slider/slider.html
+++ b/slider/slider.html
@@ -17,6 +17,7 @@
 				border: solid 2px green;
 				background-color: #008000;
 				height: 30px;
+				cursor: pointer;
 			}
 			body {
 				margin: 0px;
