moving scripts around

--- a/grid/scripts/grid.html
+++ b/grid/scripts/grid.html
@@ -12,7 +12,7 @@
         <div id='content'></div>
 		
 		<script type='text/javascript' 
-                src='../../../../steal/steal.js?mxui/grid/scripts/gridfiller/gridfiller.js'>   
+                src='../../../steal/steal.js?mxui/grid'>   
         </script>
 	</body>
 </html>
