--- a/resizer/resizer.html
+++ b/resizer/resizer.html
@@ -26,10 +26,10 @@
 	<body>
 	    <table id='resizer' width='100%'>
 	    	<tr>
-	    		<th><span class='minWidth'>One</span></th>
-				<th><span class='minWidth'>Two</span></th>
-				<th><span class='minWidth'>Three</span></th>
-				<th><span class='minWidth'>Four</span></th>
+	    		<th><span>One</span></th>
+				<th><span>Two</span></th>
+				<th><span>Three</span></th>
+				<th><span>Four</span></th>
 	    	</tr>
 	    </table>
 		<script type='text/javascript' 
