updates to filemanager, refactored a bit

--- a/filemanager/filemanager.html
+++ b/filemanager/filemanager.html
@@ -47,7 +47,7 @@
 			})
 			$(document).ready(function(){
 				$('#wrapper').mxui_filemanager({
-					model: new Entry.List(),
+					model: Entry,
 					fileColumns: {
 						name: "Name",
 						status: "Status"
